site.css
/* Page layout */

body {
  /* Limit all content to center for ease of reading. */
  margin: 0 auto;
  max-width: 1000px;

  /* Show main navigation as sidebar. */
  display: grid;
  grid-template-columns: 1fr 4fr;
}

header.main {
  /* Show main navigation as sidebar. */
  grid-row: 1;
  grid-column: 1 / 3;
}

nav.main {
  /* Show main navigation as sidebar. */
  grid-row: 2;
  grid-column: 1;
}

main {
  /* Show main navigation as sidebar. */
  grid-row: 2;
  grid-column: 2;
}

/* Color Scheme */

:root {
  --text-color: white;
  --background-color: black;

  --muted-color: grey;
  --highlight-color: lightyellow;
  --bright-highlight-color: yellow;
  --hr-color: var(--muted-color);
  --target-color: var(--highlight-color);
}

html {
  /* Dark mode. Not using OS setting because exposing it is incompatible with anti-fingerprinting. */
  color: var(--text-color);
  background-color: var(--background-color);
}

header.main, a:link {
  color: red; /* Considered #ff006f too */
}

a:visited {
  color: #b30000;
}


/* Page template styling */

body {
  padding: 10px;
}

main  > h1 {
  margin: 0;
}

header.main a:link, header.main a:visited {
  color: inherit;
  text-decoration: none;
}

nav.main a:link {
  text-decoration: none;
}

nav.main ul {
  padding-left: 20px;
}

nav.main li {
  list-style: none;
  margin: 5px 0;
}

nav.main #page-history-link:target {
  background-color: var(--bright-highlight-color);
}

article > header img.avatar {
  width: 50px;
  vertical-align: middle;
  margin-right: 1em;
}

article > img {
  max-width: 100%;
}

footer.comments {
  padding-left: 15px;
}

footer.comments:not(.has-comments) {
  border-top: solid var(--hr-color) 1px;
}

footer.comments > article {
  margin-top: 10px;
  border: solid var(--hr-color) 1px;
}

main > hr.article-separator {
  border-top: solid var(--hr-color) 10px;
}


/* Default element styles */

p:not(.intro) {
  text-indent: 1.5em;
}

blockquote {
  border-left: solid var(--hr-color) 4px;
  padding-left: 10px;
  margin-left: 5px;
}

blockquote cite {
  text-indent: 1.5em;
}

pre {
  white-space: pre-wrap;
  font-family: inherit;
}

article {
  padding: 5px;
}

:target {
  border: solid var(--bright-highlight-color) 1px !important;
}


/* Headings */

h1 { font-size: 32px; }
h2 { font-size: 24px; }
h3, h4, h5, h6 { font-size: 20px; }

h1:before, h2:before, h3:before, h4:before, h5:before, h6:before {
  line-height: 0; /* Shows an extra empty line in Firefox without this?? */
}

main:not(.article-index) h2:before { content: '→ '; }
main:not(.article-index) h3:before { content: '⇉ '; }
main:not(.article-index) h4:before { content: '⇶ '; }
main:not(.article-index) h5:before { content: '⇶→ '; }
main:not(.article-index) h6:before { content: '⇶⇉ '; }

main.article-index h3:before { content: '→ '; }
main.article-index h4:before { content: '⇉ '; }
main.article-index h5:before { content: '⇶ '; }
main.article-index h6:before { content: '⇶→ '; }

footer.comments > h1:before { content: ''; }
footer.comments > h2:before { content: ''; }
footer.comments > h3:before { content: ''; }
footer.comments > h4:before { content: ''; }
footer.comments > h5:before { content: ''; }
footer.comments > h6:before { content: ''; }


/* Library */

article header, article header a.date:visited, article header a.date:link {
  color: var(--muted-color);
  text-decoration: none;
}

.todo {
  background-color: var(--highlight-color);
  color: black;
  border-radius: 3px;
  text-indent: 0;
}

.muted {
  color: var(--muted-color);
}

.author {
  color: var(--text-color)
}

.broken-link {
  text-decoration: line-through;
}


/* Page-specific styling */

main#evil-mail > article {
  border-style: solid;
  border-color: var(--hr-color);
  border-width: 3px !important;
  padding: 10px;
  margin-top: 20px;
}

main#evil-mail > article h2 {
  margin-top: 0;
}

